# politrade

./: .env.example  .gitignore  DEPLOY_RENDER.md  README.md  pyproject.toml  render.yaml  requirements.txt  start-local.ps1
config/: settings.yaml
docs/guide/: politrade-guide.html
scripts/: build_guide_pdf.py  capture_guide_screenshots.py
src/politrade/: __init__.py  bot_runner.py  config.py  logging_setup.py  main.py  notifications.py  paths.py  retry.py  wallet_store.py
src/politrade/analysis/: __init__.py  hot_markets.py  leader_ranker.py  leader_scanner.py  metrics.py  opportunity_cache.py  trade_opportunities.py
src/politrade/api/: __init__.py  clob_client.py  data_client.py  rate_limit.py
src/politrade/bundled/: settings.yaml
src/politrade/config/: __init__.py
src/politrade/crypto/: __init__.py  budget.py  cycle_summary.py  decision_rationale.py  discovery.py  executor.py  experience.py  gamma_discovery.py  learner.py  live_dashboard.py  live_state.py  markets_catalog.py  price_feed.py  redemption.py  runner.py  sim_display.py  sim_engine.py  (+9 more)
tests/: test_crypto_budget.py  test_crypto_discovery.py  test_crypto_experience.py  test_crypto_markets_catalog.py  test_crypto_strategy.py  test_crypto_window.py  test_cycle_summary.py  test_decision_rationale.py  test_exit_monitor.py  test_gamma_discovery.py  test_learner.py  test_live_dashboard.py  test_metrics.py  test_portfolio_trade.py  test_position_valuation.py  test_repository.py  test_risk.py  test_sim_betting.py  test_sim_display.py  test_sim_engine.py  test_sim_optimizer.py  test_sim_runner.py  test_sim_sizing.py  test_sim_stats.py  test_strategy_space.py  test_system_status.py  test_trade_opportunities.py  test_trade_selector.py  test_user_settings.py  test_wallet_activity.py  test_wallet_portfolio.py
(+43 files in other folders)
