[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "politrade"
version = "0.1.0"
description = "Personal Polymarket copy-trading bot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "py-clob-client-v2>=0.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "python-dotenv>=1.0",
    "structlog>=24.0",
    "pyyaml>=6.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
politrade = "politrade.main:main"
politrade-web = "politrade.web.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"politrade.web" = ["templates/*.html", "static/*"]
"politrade.config" = ["settings.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
